# RMG

./: CMakeLists.txt
.github/workflows/: release.yml
Source/RMG/: CMakeLists.txt
Source/RMG-Audio/: sdl_backend.cpp
Source/RMG-Core/: Settings.cpp  Settings.hpp
Source/RMG-Input-GCA/UserInterface/: MainDialog.cpp
Source/RMG-Input/UserInterface/: OptionsDialog.cpp
Source/RMG-Input/UserInterface/Widget/: ControllerWidget.cpp
Source/RMG/Translations/: README.md  RMG_de.ts  RMG_en.ts  RMG_es.ts  RMG_fr.ts  RMG_it.ts  RMG_ja.ts  RMG_ko.ts  RMG_pl.ts  RMG_pt_BR.ts  RMG_ru.ts  RMG_zh.ts  extract_strings.py  generate_en_ts.py  generate_ru_ts.py  generate_skeleton_ts.py
Source/RMG/UserInterface/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  UIResources.qrc
Source/RMG/UserInterface/Dialog/: RomInfoDialog.cpp  RomInfoDialog.ui  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui
Source/RMG/UserInterface/Dialog/Cheats/: AddCheatDialog.cpp
Source/RMG/UserInterface/Dialog/Netplay/: CreateNetplaySessionDialog.cpp  NetplaySessionBrowserDialog.cpp  NetplaySessionDialog.cpp
Source/RMG/UserInterface/Dialog/Update/: UpdateDialog.cpp
Source/RMG/UserInterface/Resource/: toolbar.qss
Source/RMG/UserInterface/Resource/icons/black/: index.theme
Source/RMG/UserInterface/Resource/icons/white/: index.theme
Source/RMG/UserInterface/Widget/: KeybindButton.cpp
Source/RMG/UserInterface/Widget/Netplay/: CreateNetplaySessionWidget.cpp  NetplaySessionBrowserLoadingWidget.cpp  NetplaySessionBrowserLoadingWidget.hpp  NetplaySessionBrowserWidget.cpp
Source/RMG/UserInterface/Widget/RomBrowser/: RomBrowserLoadingWidget.cpp  RomBrowserSearchWidget.cpp  RomBrowserWidget.cpp
Source/RMG/Utilities/: QtMessageBox.cpp
